@@ -1,4 +1,4 @@
-/**
+/*
  * This file is part of logisim-evolution.
  *
  * Logisim-evolution is free software: you can redistribute it and/or modify
@@ -11,7 +11,7 @@
  * or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
  * for more details.
  *
- * You should have received a copy of the GNU General Public License along 
+ * You should have received a copy of the GNU General Public License along
  * with logisim-evolution. If not, see <http://www.gnu.org/licenses/>.
  *
  * Original code by Carl Burch (http://www.cburch.com), 2011.
@@ -29,6 +29,7 @@
 package com.cburch.logisim.instance;
 
 import com.cburch.logisim.circuit.CircuitState;
+import com.cburch.logisim.data.BitWidth;
 import com.cburch.logisim.data.Value;
 import com.cburch.logisim.gui.log.Loggable;
 import org.slf4j.Logger;
@@ -46,50 +47,42 @@ class InstanceLoggerAdapter implements Loggable {
       InstanceComponent comp, Class<? extends InstanceLogger> loggerClass) {
     try {
       this.comp = comp;
-      this.logger = loggerClass.newInstance();
+      this.logger = loggerClass.getDeclaredConstructor().newInstance();
       this.state = new InstanceStateImpl(null, comp);
     } catch (Exception t) {
-      handleError(t, loggerClass);
+      String className = loggerClass.getName();
+      loggerS.error("Error while instantiating logger {}: {}", className,
+          t.getClass().getName());
+      String msg = t.getMessage();
+      if (msg != null)
+        loggerS.error("  ({})", msg); // OK
       logger = null;
     }
   }
 
   public String getLogName(Object option) {
-    if (logger != null) {
-      return logger.getLogName(state, option);
-    } else {
-      return null;
-    }
+    return logger == null ? null : logger.getLogName(state, option);
   }
 
-  public Object[] getLogOptions(CircuitState circState) {
-    if (logger != null) {
-      updateState(circState);
-      return logger.getLogOptions(state);
-    } else {
-      return null;
-    }
+  public BitWidth getBitWidth(Object option) {
+    return logger == null ? null : logger.getBitWidth(state, option);
+  }
+  
+  public boolean isInput(Object option) {
+    return logger == null ? false : logger.isInput(state, option);
+  }
+
+  public Object[] getLogOptions() {
+    return logger == null ? null : logger.getLogOptions(state);
   }
 
   public Value getLogValue(CircuitState circuitState, Object option) {
     if (logger != null) {
-      updateState(circuitState);
+      if (state.getCircuitState() != circuitState)
+        state.repurpose(circuitState, comp);
       return logger.getLogValue(state, option);
     } else {
       return Value.UNKNOWN;
-    }
-  }
-
-  private void handleError(Throwable t, Class<? extends InstanceLogger> loggerClass) {
-    String className = loggerClass.getName();
-    loggerS.error("Error while instantiating logger {}: {}", className, t.getClass().getName());
-    String msg = t.getMessage();
-    if (msg != null) loggerS.error("  ({})", msg); // OK
-  }
-
-  private void updateState(CircuitState circuitState) {
-    if (state.getCircuitState() != circuitState) {
-      state.repurpose(circuitState, comp);
     }
   }
 }
